--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,7 @@
     "password": "matchmaking123",
     "database": "matchmaking_DEV",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb"
   },
   "test": {
     "username": "root",
